--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Ay señor, señor...
+<html><head>
+  <title>Una serie de catastróficas desdichas de jmmarino2</title>
+</head>
+<body>
+  <div class="page">
+  <h1>Para qué estudiaría yo electrónica...</h1>
+</div>
