--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<html><head>
-  <title>Una serie de catastróficas desdichas de jmmarino2</title>
-</head>
-<body>
-  <div class="page">
-  <h1>Para qué estudiaría yo electrónica...</h1>
-  </div>
-</body>
+<html><head><title>jmmarino2.github.io</title></head>
+<frameset cols="*">
+ <frame name="main" src="https://github.com/jmmarino2/jmmarino2.github.io/wiki" scrolling="auto" noresize>
+ <noframes>
+ <body>
+
+ Your browser does not support frames
+ Su explorador no soporta frames
+ Mira, meu rei, ó naveghador de interné que estás a usar non lle funsionan unhas cousas que se chaman "frames", ou algho paresido.
+   
+ </body>
+ </noframes>
+</frameset>
 </html>
