--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html><head><title>jmmarino2.github.io</title></head>
-<frameset cols="*">
- <frame name="main" src="https://github.com/jmmarino2/jmmarino2.github.io/wiki" scrolling="auto" noresize>
-
+<frameset rows="*"> 
+ <frame src="https://github.com/jmmarino2/jmmarino2.github.io/wiki">
 </frameset>
 </html>
