--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
-<html><head><title>jmmarino2.github.io</title></head>
-<frameset rows="*"> 
- <frame src="https://github.com/jmmarino2/jmmarino2.github.io/wiki">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
+"http://www.w3.org/TR/html4/frameset.dtd">
+<head>
+<title>jmmarino2.github.io</title>
+</head>
+
+<frameset rows="100%,*" border="0">
+<frame name="__main" src="https://github.com/jmmarino2/jmmarino2.github.io/wiki"
+noresize frameborder="0">
+<noframes>
+<h2>Your Web browser does not support frames</h2>
+<p>
+Please click the link to visit
+<a href="http://www.anothersite.com/folder/">http://www.anothersite.com/folder/</a>
+directly.
+</p>
+</noframes>
 </frameset>
+
+
 </html>
