--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 </head>
 
 <frameset rows="100%,*" border="0">
-<frame name="__main" src="https://github.com/jmmarino2/jmmarino2.github.io/wiki"
-noresize frameborder="0">
+<frame name="__main" src="https://github.com/jmmarino2/jmmarino2.github.io/wiki" noresize frameborder="0">
 <noframes>
 <h2>Your Web browser does not support frames</h2>
 <p>
 Please click the link to visit
-<a href="http://www.anothersite.com/folder/">http://www.anothersite.com/folder/</a>
+<a href="https://github.com/jmmarino2/jmmarino2.github.io/wiki">https://github.com/jmmarino2/jmmarino2.github.io/wiki</a>
 directly.
 </p>
 </noframes>
