--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
-"http://www.w3.org/TR/html4/frameset.dtd">
+<!DOCTYPE html>
+
+<html>
 <head>
 <title>jmmarino2.github.io</title>
+<meta http-equiv="refresh" content="2; URL=https://github.com/jmmarino2/jmmarino2.github.io/wiki">
+<meta name="keywords" content="automatic redirection">
 </head>
-
-<frameset rows="100%,*" border="0">
-<frame name="__main" src="https://github.com/jmmarino2/jmmarino2.github.io/wiki" noresize frameborder="0">
-<noframes>
-<h2>Your Web browser does not support frames</h2>
-<p>
-Please click the link to visit
-<a href="https://github.com/jmmarino2/jmmarino2.github.io/wiki">https://github.com/jmmarino2/jmmarino2.github.io/wiki</a>
-directly.
-</p>
-</noframes>
-</frameset>
-
-
+<body>
+If your browser doesn't automatically go there within a few seconds, 
+you may want to go to 
+<a href="https://github.com/jmmarino2/jmmarino2.github.io/wiki">the destination</a> 
+manually.
+</body>
 </html>
